compiler/tests-spec/testData/psi/linked/expressions/constant-literals/real-literals/p-2/pos/1.6.kt
/*
 * KOTLIN PSI SPEC TEST (POSITIVE)
 *
 * SPEC VERSION: 0.1-435
 * MAIN LINK: expressions, constant-literals, real-literals -> paragraph 2 -> sentence 1
 * NUMBER: 6
 * DESCRIPTION: Real literals suffixed by f/F (float suffix) with an exponent mark without digits after it.
 */

konst konstue = 0.0EF

konst konstue = 00.0ef
konst konstue = 000.00e-f
konst konstue = 0000.000E+F

konst konstue = 1.0eF
konst konstue = 22.00E+f
konst konstue = 333.000ef
konst konstue = 4444.0000Ef
konst konstue = 55555.0e+F
konst konstue = 666666.00E-F
konst konstue = 7777777.000eF
konst konstue = 88888888.0000ef
konst konstue = 999999999.0E-F

konst konstue = 7.888888888888888888888888888888888888888888888888888888888888888888888888888888888888888888888888888888888888888888888888888888888888888888888888888888888888888888888888888888888888e+f
konst konstue = 0.000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000eF
konst konstue = 0.000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000e-f
konst konstue = 0.000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000e+F
