compiler/tests-spec/testData/psi/linked/expressions/constant-literals/real-literals/p-2/neg/1.4.kt
/*
 * KOTLIN PSI SPEC TEST (NEGATIVE)
 *
 * SPEC VERSION: 0.1-435
 * MAIN LINK: expressions, constant-literals, real-literals -> paragraph 2 -> sentence 1
 * NUMBER: 4
 * DESCRIPTION: Real literals with a not allowed digits and exponent mark followed by a float suffix.
 */

konst konstue = 0.0f00e0

konst konstue = 00.0f0e-0
konst konstue = 000.00F9E9
konst konstue = 0000.000F0e1

konst konstue = 1.0F0e
konst konstue = 22.00F9e+f
konst konstue = 333.000f5ef
konst konstue = 4444.0000F1EF2EF3EF4EF5EF6EF7EF8EF9
konst konstue = 55555.0f7e+0F
konst konstue = 666666.00F000000000000e-0000000000000
konst konstue = 7777777.000f9E0000000000000F
konst konstue = 88888888.0000f2e+0000000000000
konst konstue = 999999999.0F4E+F

konst konstue = 7.888888888888888888888888888888888888888888888888888888888888888888888888888888888888888888888888888888888888888888888888888888888888888888888888888888888888888888888888888888888888f8e+0
konst konstue = 0.000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000f8e8
konst konstue = 0.000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000f0E0000001
konst konstue = 0.000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000f6E010
